kustomize/overlays/staging/deploy-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: my-node-app
        image: yugandhar99/node-cicd-eks:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "750m"
            memory: "512Mi"
          requests:
            cpu: "500m"
            memory: "512Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
